I created animations using animate css and fixed the flash white when reloading page in dark mode

--- a/css/contact.css
+++ b/css/contact.css
@@ -41,3 +41,21 @@
         
     }
 }
+
+/* Styles for contact page in desktop */
+
+@media (min-width: 1024px) {
+    .main-contact {
+        font-size: 2.4rem;
+        height: 60vh;
+    }
+
+    .main__mail {
+        padding-inline: 190px;
+    }
+
+    .main__mail:hover {
+        color: var(--clr-purple);
+        
+    }
+}
