--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ a:visited {
 }
 
 .nav__right{
+    z-index: 200;
     width: 100%;
     text-align: center;
     position: absolute;
@@ -426,7 +427,7 @@ a:visited {
 @media (min-width: 1400px) {
     body {
         display: grid;
-        place-content: center;
+        justify-content: center; 
     }
     
     footer {
